DANGER!!! roles revamp